mobile view overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
 }
+*{overflow-x: clip;}
 
 html {
     scroll-behavior: smooth;
